--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 autosave.md
+autosave.md
+sc1.png
+test_app.py
+autosave.md
+autosave.md
