--- a/.gitignore
+++ b/.gitignore
@@ -160,9 +160,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-autosave.md
-autosave.md
 sc1.png
+setup.py
 test_app.py
-autosave.md
 autosave.md
