--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,11 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-textual = "^0.47.1"
+textual = "^0.86.1"
 markdown = "^3.5.2"
 pypandoc = "^1.13"
 pygments = "^2.17.2"
+pendulum = "^3.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
