--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [tool.poetry]
-name = "tusk-editor"
+name = "tusk"
 version = "0.1.0"
 description = "A modern terminal-based Markdown editor"
 authors = ["vedant-asati03 <vedant.asati03@gmail.com>"]
 readme = "README.md"
 license = "MIT"
+packages = [
+    { include = "tusk" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -12,7 +15,6 @@ textual = "^0.86.1"
 markdown = "^3.5.2"
 pypandoc = "^1.13"
 pygments = "^2.17.2"
-pendulum = "^3.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
